--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git@github.com:Airbitz/yaob.git"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf lib && rollup -c",
     "build:test": "rollup -c rollup.config.test.js",
     "precommit": "lint-staged && flow && npm test && npm run build",
     "flow": "flow",
@@ -49,6 +49,7 @@
     "mocha": "^5.2.0",
     "prettier-eslint-cli": "^4.7.1",
     "redux": "^4.0.0",
+    "rimraf": "^2.6.2",
     "rollup": "^0.61.2",
     "rollup-plugin-babel": "^3.0.5",
     "rollup-plugin-flow-entry": "^0.2.0",
