--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "yaob",
   "version": "0.2.0",
   "description": "Bridges an object-oriented API across a messaging layer",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Airbitz/yaob.git"
+  },
   "license": "MIT",
   "files": [
     "CHANGELOG.md",
@@ -13,10 +17,6 @@
   ],
   "main": "lib/yaob.js",
   "module": "lib/yaob.mjs",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Airbitz/yaob.git"
-  },
   "scripts": {
     "build": "rimraf lib && rollup -c",
     "build:test": "rollup -c rollup.config.test.js",
@@ -29,11 +29,10 @@
     "test": "mocha --require source-map-support/register build/tests.js"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^8.2.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-preset-flow": "^6.23.0",
     "chai": "^4.1.2",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
@@ -53,7 +52,7 @@
     "redux": "^4.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.61.2",
-    "rollup-plugin-babel": "^3.0.5",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-filesize": "^4.0.1",
     "rollup-plugin-flow-entry": "^0.2.0",
     "source-map-support": "^0.5.6"
