--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
     "babel-eslint": "^8.2.5",
     "chai": "^4.1.2",
     "eslint": "^5.0.1",
@@ -56,7 +56,9 @@
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-filesize": "^4.0.1",
     "rollup-plugin-flow-entry": "^0.2.0",
-    "source-map-support": "^0.5.6"
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "source-map-support": "^0.5.6",
+    "typescript": "^3.0.3"
   },
   "importSort": {
     ".js, .es": {
