--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "pretest": "npm run build:test",
     "test": "mocha --require source-map-support/register build/tests.js"
   },
+  "dependencies": {
+    "rfc4648": "^1.1.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
