--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,8 @@
 {
-  "extends": ["standard", "plugin:flowtype/recommended"],
-  "parser": "babel-eslint",
-  "plugins": ["flowtype", "standard"],
+  "extends": ["standard-kit/lint", "standard-kit/lint/flow"],
+  "plugins": ["prettier"],
   "rules": {
-    "camelcase": "error",
-    "flowtype/generic-spacing": "off",
-    "no-throw-literal": "error",
     "no-var": "error",
-    "prefer-const": "error"
+    "prettier/prettier": "error"
   }
 }
