--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
     "simple-import-sort"
   ],
   "rules": {
-    "no-var": "error",
-    "simple-import-sort/sort": "error"
+    "simple-import-sort/imports": "error"
   }
 }
